Very quick base update for mobile view.

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i" rel="stylesheet">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/css/normalize.css">
   <!--
     Notice the use of %PUBLIC_URL% in the tag above.
@@ -48,7 +48,7 @@
   </section>
 
   <section class="page">
-    <header>
+    <header class="page__header">
       <h2>Share your results with friends!</h2>
     </header>
     <div class="page__content">
